disquas and analytics

--- a/_posts/2018-12-26-Glove.md
+++ b/_posts/2018-12-26-Glove.md
@@ -5,6 +5,8 @@ math: true
 date: 2018-12-26
 categories: NLP DeepLearning PaperReview
 permalink: nlp/deeplearning/paperreview/Glove/
+comments: true
+
 ---
 
 
