--- a/_posts/2019-02-20-GAN-튜토리얼.md
+++ b/_posts/2019-02-20-GAN-튜토리얼.md
@@ -5,6 +5,7 @@ math: true
 date: 2019-02-20
 categories: Seminar Tutorial MNIST PyTorch GAN
 permalink: seminar/tutorial/mnist/pytorch/gan/GAN-튜토리얼/
+comments: true
 ---
 
 이번 포스트에서는 PyTorch를 이용하여 [GAN(Generative Adversarial Network)](https://papers.nips.cc/paper/5423-generative-adversarial-nets.pdf)을 구현하여 [MNIST](http://yann.lecun.com/exdb/mnist/) 데이터를 생성해보는 튜토리얼을 다룹니다. MNIST 데이터는 간단히 말해 0부터 9까지의 숫자를 손글씨로 적은 이미지와 그에 대한 레이블 페어로 이루어진 총 7만개의 데이터셋입니다.
